# game

./: .gitignore  CMakeLists.txt
src/: main.c  settings.c  settings.h
src/input/: settings_mouse.c  settings_mouse.h
src/renderer/: game_renderer.c  game_renderer.h  renderer_manager.c  renderer_manager.h  settings_renderer.c  settings_renderer.h
